photo add korlam

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Tanim ahmed portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/tanim_5fut_size-removebg-preview.png" type="image/x-icon">
 </head>
 <body>
     <h1>This is tanim ahmed parsonal wevsite</h1>
