kisu add korlam

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title> Tanim ahmed portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/tanim_5fut_size-removebg-preview.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Asap:wght@500&family=Slabo+27px&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>This is tanim ahmed parsonal wevsite</h1>
+    <h1>Wellcome to</h1>
+    <h1> <span class="name-color"> Tanim ahmed</span> world!</h1>
 </body>
 </html>
