--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 <body>
     <h1>Wellcome to</h1>
     <h1> <span class="name-color"> Tanim ahmed</span> world!</h1>
+    <h2> About my self </h2>
+    <p class="pera-1">আমি তানিম আহমেদ ,আমার জীবনে কিসুই করতে পারি নাই,আর আমাকে দিয়ে কিসোই হবে না।  </p>
+    <img src="images/my-bg.png" alt="">
 </body>
 </html>
