--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Asap:wght@500&family=Slabo+27px&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Wellcome to</h1>
-    <h1> <span class="name-color"> Tanim ahmed</span> world!</h1>
-    <h2> About my self </h2>
-    <p class="pera-1">আমি তানিম আহমেদ ,আমার জীবনে কিসুই করতে পারি নাই,আর আমাকে দিয়ে কিসোই হবে না।  </p>
-    <img src="images/my-bg.png" alt="">
-</body>
+   <section>
+    <div class="half-display1"> <h1>Wellcome to</h1>
+        <h1> <span class="name-color"> Tanim ahmed</span> world!</h1>
+        <h2> About my self </h2>
+        <p class="pera-1">আমি তানিম আহমেদ ,আমার জীবনে কিসুই করতে পারি নাই,আর আমাকে দিয়ে কিসোই হবে না।  </p>
+       </div>
+       <div class="half-display2"> <img src="images/my-bg.png" alt=""></div>
+    </body>
+   </section>
 </html>
