--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 </head>
 <body>
    <section>
-    <div class="half-display1"> <h1>Wellcome to</h1>
+    <div class="half-display"> <h1>Wellcome to</h1>
         <h1> <span class="name-color"> Tanim ahmed</span> world!</h1>
         <h2> About my self </h2>
         <p class="pera-1">আমি তানিম আহমেদ ,আমার জীবনে কিসুই করতে পারি নাই,আর আমাকে দিয়ে কিসোই হবে না।  </p>
+        <a class="link-disign" target="_blank" href="https://www.linkedin.com/in/tanim-ahmed-9526b920b/">HIRE ME</a>
        </div>
-       <div class="half-display2"> <img src="images/my-bg.png" alt=""></div>
+       
+       <div class="half-display"> <img src="images/my-bg.png" alt=""></div>
     </body>
    </section>
 </html>
