aro kisu add korlm

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Asap:wght@500&family=Slabo+27px&display=swap" rel="stylesheet">
 </head>
 <body>
-   <section>
+   <section class="top-benar">
     <div class="half-display"> <h1>Wellcome to</h1>
         <h1> <span class="name-color"> Tanim ahmed</span> world!</h1>
         <h2> About my self </h2>
