kisu akta add korsi

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Asap:wght@500&family=Slabo+27px&display=swap" rel="stylesheet">
 </head>
 <body>
-   <section class="top-benar">
+   <section class="top-benar flaxiable-container">
     <div class="half-display"> <h1>Wellcome to</h1>
         <h1> <span class="name-color"> Tanim ahmed</span> world!</h1>
         <h2> About my self </h2>
@@ -24,7 +24,7 @@
     
    </section>
   
-  <section class="dream-big">
+  <section class="dream-big flaxiable-container">
       <div>
           <img src="images/dream pic.png" alt="">
       </div>
@@ -35,6 +35,24 @@
               <p>The Most Relevant information. 100% Privacy Protected! Find what you are looking for Here. 99% Match on Web Designer New York. Only relevant search results, Click here and Find. Discover us now! Easy Acces To Information. Simple in use. Multiple sources combined.</p>
               <a class= "link-disign" target="-blank" href="https://www.linkedin.com/in/tanim-ahmed-9526b920b/">DOWNLOAD</a>
       </div>
+  </section>
+  <section class="experians-area ">
+   <h1> EXPEREANCE</h1>
+   <div class="flaxiable-container">
+    <div class="half-display">
+        <h1> Full stack wev developer</h1>
+        <h3> 2021-Present | Pro Level Developer </h3>
+ 
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    </div>
+    <div class="half-display">
+        <h1> Baby wev developer</h1>
+        <h3>Hero Learner</h3>
+        <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+   </div>
+
+   </div>
+
   </section>
 </body>
 </html>
