--- a/index.html
+++ b/index.html
@@ -39,20 +39,16 @@
   <section class="experians-area ">
    <h1> EXPEREANCE</h1>
    <div class="flaxiable-container">
-    <div class="half-display">
+    <div class="experians-item">
         <h1> Full stack wev developer</h1>
-        <h3> 2021-Present | Pro Level Developer </h3>
+        <h2> 2021-Present | Pro Level Developer </h2>
  
         <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
     </div>
-    <div class="half-display">
+    <div class="experians-item">
         <h1> Baby wev developer</h1>
-        <h3>Hero Learner</h3>
+        <h2>Hero Learner</h2>
         <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
    </div>
 
    </div>
-
-  </section>
-</body>
-</html>
