--- a/index.html
+++ b/index.html
@@ -39,16 +39,19 @@
   <section class="experians-area ">
    <h1> EXPEREANCE</h1>
    <div class="flaxiable-container">
-    <div class="experians-item">
+    <div id="wev-dev-experience" class="experians-item">
         <h1> Full stack wev developer</h1>
         <h2> 2021-Present | Pro Level Developer </h2>
  
         <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
     </div>
-    <div class="experians-item">
+    <div id="baby-wev-dev" class="experians-item">
         <h1> Baby wev developer</h1>
         <h2>Hero Learner</h2>
         <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
    </div>
 
    </div>
+   <footer> 
+       <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+   </footer>
